[gd_scene load_steps=27 format=3 uid="uid://k78r5mnfr86l"]

[ext_resource type="Script" uid="uid://dt01fmi0ud6n0" path="res://Scripts/Core/main.gd" id="1_21xkr"]
[ext_resource type="Script" uid="uid://diupc0dagbyfv" path="res://Scripts/Managers/card_manager.gd" id="1_bo1nx"]
[ext_resource type="PackedScene" uid="uid://hicesjantdjt" path="res://Scenes/Core/interactiveCard.tscn" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://bg34rp06cjr8r" path="res://Scripts/Managers/RoundManager.gd" id="1_rm"]
[ext_resource type="Script" uid="uid://cgaq32kgv6rlc" path="res://Scripts/Managers/TurnManager.gd" id="1_tm"]
[ext_resource type="Script" uid="uid://lbbt084v7576" path="res://Scripts/Managers/UIManager.gd" id="1_uim"]
[ext_resource type="Script" uid="uid://07gd83vaqvgj" path="res://Scripts/Core/parallax.gd" id="2_6bp64"]
[ext_resource type="Shader" uid="uid://y6n83i5mjk4c" path="res://Scripts/Shader/post_processing.gdshader" id="3_8gbba"]
[ext_resource type="PackedScene" uid="uid://2gbx8t47wulx" path="res://Scenes/UI/backgrounds.tscn" id="5_1w6v2"]
[ext_resource type="Script" uid="uid://bghl75ky5hfgf" path="res://Scripts/Managers/ai_manager.gd" id="5_h1bgf"]
[ext_resource type="PackedScene" uid="uid://gdkre2xkksra" path="res://Scenes/Core/deck.tscn" id="6_6bp64"]
[ext_resource type="Script" uid="uid://bayld4regrxic" path="res://Scripts/Managers/InfoScreenManager.gd" id="6_b3802"]
[ext_resource type="Script" uid="uid://eb6xrlbug6il" path="res://Scripts/Managers/EffectsManager.gd" id="7_b3802"]
[ext_resource type="PackedScene" uid="uid://djx8niab6ivv2" path="res://Scenes/Core/discard_pile.tscn" id="7_hptm8"]
[ext_resource type="PackedScene" uid="uid://gu4ayccbc2mf" path="res://Scenes/Core/drop_zone.tscn" id="7_ynf5e"]
[ext_resource type="PackedScene" uid="uid://bd7r3kr8kyerm" path="res://Scenes/UI/ui_panel.tscn" id="10_d1ilt"]
[ext_resource type="Shader" uid="uid://bj1asd5qhlhol" path="res://Scripts/Shader/smallDisplay.gdshader" id="14_h1bgf"]
[ext_resource type="PackedScene" uid="uid://buq3dldmk3rjb" path="res://Scenes/UI/GameStateTray.tscn" id="14_k12tt"]
[ext_resource type="Shader" uid="uid://c82r54bghps0l" path="res://Scripts/Shader/TextJitter.gdshader" id="18_hibaj"]
[ext_resource type="PackedScene" uid="uid://k38net5o8hkc" path="res://Scenes/UI/show_case.tscn" id="18_pdsj5"]
[ext_resource type="FontFile" uid="uid://ckn5l8v7si46r" path="res://Assets/fonts/Jacquard12-Regular.ttf" id="19_pdsj5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b3802"]
shader = ExtResource("14_h1bgf")
shader_parameter/box_color = Color(0.08235294, 0.17254902, 0.39215687, 0.79607844)
shader_parameter/line_color = Color(0.35, 0.35, 0.38, 1)
shader_parameter/corner_radius = 0.1600000076
shader_parameter/line_thickness = 0.0010000000475
shader_parameter/line_position1 = 0.0
shader_parameter/line_position2 = 0.0
shader_parameter/gleam_color = Color(0.50129026, 0.50129026, 0.50129026, 0.101960786)
shader_parameter/gleam_speed = 0.0
shader_parameter/gleam_width = 0.93600004446
shader_parameter/curvature_amount = 0.0
shader_parameter/vignette_intensity = 0.48800002318
shader_parameter/vignette_softness = 1.78300008143262
shader_parameter/dirt_intensity = 0.09600000456
shader_parameter/dirt_scale = 81.2930038139175

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ee4r6"]
shader = ExtResource("18_hibaj")
shader_parameter/jitter_rate = 8.0
shader_parameter/jitter_amount = 0.003

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gt3je"]
bg_color = Color(0.08235294, 0.13725491, 0.25882354, 0.34509805)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[sub_resource type="LabelSettings" id="LabelSettings_3pmx8"]
font = ExtResource("19_pdsj5")
font_size = 64
shadow_size = 4
shadow_color = Color(0.1883249, 0.25125608, 0.33404034, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jjvhh"]
shader = ExtResource("3_8gbba")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.058000002755
shader_parameter/scanlines_width = 0.14000000665
shader_parameter/grille_opacity = 0.050000002375
shader_parameter/resolution = Vector2(1920, 1080)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 2.0
shader_parameter/roll_size = 6.000000285
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.002000000095
shader_parameter/noise_opacity = 0.01600000076
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.03600000171
shader_parameter/aberration = 4.7499999933364734e-08
shader_parameter/brightness = 1.0
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.09600000456
shader_parameter/clip_warp = true
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.0750000035625

[node name="main" type="Node2D" node_paths=PackedStringArray("discard_pile_node")]
script = ExtResource("1_21xkr")
cards_to_draw = 4
discard_pile_node = NodePath("Parallax/discardPile")

[node name="Managers" type="Node" parent="."]

[node name="RoundManager" type="Node" parent="Managers"]
script = ExtResource("1_rm")
player_hand_spacing = 150.0
player_fan_angle_degrees = 20.0
player_card_size = Vector2(200, 280)
opponent_card_size = Vector2(200, 280)
player_hand_offset_x = -150.0

[node name="TurnManager" type="Node" parent="Managers"]
script = ExtResource("1_tm")
inactive_player_opacity = 0.2
action_pop_padding = 12.0
action_pop_grow_time = 0.02
end_of_actions_delay = 1.0
dust_particle_size = 8.0

[node name="UIManager" type="Node" parent="Managers"]
script = ExtResource("1_uim")
typing_speed = 0.08
new_state_beat_duration = 1.0

[node name="AIManager" type="Node" parent="Managers"]
script = ExtResource("5_h1bgf")
move_offset = Vector2(350, 150)
lift_duration = 0.5
rotate_duration = 0.5
move_duration = 0.8

[node name="InfoScreenManager" type="Node" parent="Managers"]
script = ExtResource("6_b3802")
typing_speed = 0.035

[node name="EffectsManager" type="Node" parent="Managers"]
script = ExtResource("7_b3802")

[node name="BackLayerUI" type="CanvasLayer" parent="."]
layer = -10
follow_viewport_enabled = true

[node name="backgrounds" parent="BackLayerUI" instance=ExtResource("5_1w6v2")]

[node name="Parallax" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_top = 4.0
offset_right = 1920.0
offset_bottom = 1084.0
mouse_filter = 2
script = ExtResource("2_6bp64")
max_offset = Vector2(15, 20)

[node name="DropZone" parent="Parallax" instance=ExtResource("7_ynf5e")]
position = Vector2(1080, 500.00003)
scale = Vector2(0.7600025, 0.9267921)
fade_in_alpha = 0.089
fade_in_duration = 0.197
fade_in_ease = 2
fade_in_trans = 6
fade_out_ease = 2
fade_out_trans = 9
shader_tween_duration = 0.5690000000000001
shader_tween_trans = 9
shader_edge_width = 0.106
shader_edge_color = Color(0.15294118, 0.68235296, 0.3764706, 1)
rotation_correction_degrees = 1.107
dust_particle_count = 16
dust_particle_size = 15.0
dust_speed = 100.0
dust_lifetime = 1.0

[node name="CardManager" type="Node2D" parent="Parallax"]
position = Vector2(-543, -219)
script = ExtResource("1_bo1nx")
card_scene = ExtResource("1_jjgbg")
draw_base_duration = 0.4
draw_stagger = 0.08
flicker_steps = 16
flicker_step_time = 0.02
flicker_blank_chance = 0.01

[node name="HandSlots" type="Node2D" parent="Parallax"]

[node name="HandSlot0" type="Node2D" parent="Parallax/HandSlots"]
position = Vector2(806, 901.99994)
rotation = -0.5194271

[node name="HandSlot1" type="Node2D" parent="Parallax/HandSlots"]
position = Vector2(989.00006, 844)
rotation = -0.09155666

[node name="HandSlot2" type="Node2D" parent="Parallax/HandSlots"]
position = Vector2(1181, 846.9998)
rotation = 0.16236253

[node name="HandSlot3" type="Node2D" parent="Parallax/HandSlots"]
position = Vector2(1355, 893)
rotation = 0.3920921

[node name="OpponentHandSlots" type="Node2D" parent="Parallax"]

[node name="OpponentSlot0" type="Node2D" parent="Parallax/OpponentHandSlots"]
position = Vector2(1055, 162)
rotation = 0.15

[node name="OpponentSlot1" type="Node2D" parent="Parallax/OpponentHandSlots"]
position = Vector2(1203, 176)
rotation = 0.05

[node name="OpponentSlot2" type="Node2D" parent="Parallax/OpponentHandSlots"]
position = Vector2(1343, 163.00002)
rotation = -0.05

[node name="OpponentSlot3" type="Node2D" parent="Parallax/OpponentHandSlots"]
position = Vector2(1483, 115)
rotation = -0.15

[node name="Deck" parent="Parallax" instance=ExtResource("6_6bp64")]
position = Vector2(1649, 641)
scale = Vector2(0.4, 0.4)

[node name="discardPile" parent="Parallax" instance=ExtResource("7_hptm8")]
position = Vector2(1776, 247)
position_offset_range_pixels = Vector2(5, 5)
flash_brightness = 4.0
wiggle_offset = Vector2(12, 2)
wiggle_duration = 1.0

[node name="FrontLayerUI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Overlay" type="ColorRect" parent="FrontLayerUI"]
material = SubResource("ShaderMaterial_b3802")
custom_minimum_size = Vector2(1920, 1080)
offset_top = -32.0
offset_right = 1960.0
offset_bottom = 1111.0
color = Color(0.14117648, 0.2, 0.25490198, 0.7411765)

[node name="GameStateTray" parent="FrontLayerUI" instance=ExtResource("14_k12tt")]
offset_left = 479.0
offset_top = 0.0
offset_right = 478.99997
offset_bottom = 0.0

[node name="UIPanel" parent="FrontLayerUI" instance=ExtResource("10_d1ilt")]
offset_left = 2.0
offset_top = 0.0
offset_right = 1.9999695
offset_bottom = 0.0
metadata/_edit_lock_ = true

[node name="ShowCase" parent="FrontLayerUI" instance=ExtResource("18_pdsj5")]
visible = false

[node name="SelectionModeLabel" type="Label" parent="FrontLayerUI"]
visible = false
material = SubResource("ShaderMaterial_ee4r6")
offset_left = 627.0
offset_top = 713.0
offset_right = 1575.0
offset_bottom = 778.0
theme_override_styles/normal = SubResource("StyleBoxFlat_gt3je")
text = "Select a card from your opponents hand."
label_settings = SubResource("LabelSettings_3pmx8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CRT" type="ColorRect" parent="FrontLayerUI"]
material = SubResource("ShaderMaterial_jjvhh")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -110.0
offset_right = 130.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[connection signal="area_entered" from="Parallax/DropZone" to="Parallax/DropZone" method="_on_area_entered"]
